Fix 1366 screen 1st section alignment

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,12 @@ h1 {
   background-position-x: center;
 }
 
+@media only screen and (max-width: 1366px) {
+  .section-1 {
+    border-right: 1px solid #60544B;
+  }
+}
+
 .section-1 .text-container {
   /* border: 1px solid black; */
   margin-left: auto;
